# AIoTHackStorm

./: CMakeLists.txt  README.md  requirements.txt
apps/vr_avatar/: CMakeLists.txt  README.md  app_default.config
apps/vr_avatar/include/: emotion_manager.h
apps/vr_avatar/server/: emotion_server.py
apps/vr_avatar/src/: dummy_face_data.h  vr_avatar_main.c
apps/vr_avatar/src/ai/: ai_manager.c  ai_manager.h
apps/vr_avatar/src/audio/: audio_capture.c  audio_capture.h
apps/vr_avatar/src/camera/: camera_manager.c  camera_manager.h
apps/vr_avatar/src/emotions/: emotion_angry.h  emotion_confused.h  emotion_happy.h  emotion_manager.c  emotion_manager.h  emotion_neutral.h  emotion_sad.h  emotion_surprised.h
apps/vr_avatar/src/mcp/: avatar_mcp.c  avatar_mcp.h
apps/vr_avatar/src/network/: face_emotion.c  face_emotion.h
apps/vr_avatar/tools/: emotion_server.py  server_requirements.txt
boards/T5AI/TUYA_T5AI_BOARD/: tuya_t5ai_ex_module.h
examples/peripherals/camera/api_test/src/: example_api_test.c
examples/peripherals/camera/output_display/src/: example_camera.c  example_camera_old.c_bak  face_data_base64.h
tools/cli_command/: cli_build.py
